--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "webpack": "webpack --config dev.config.js -w"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "webpack-cli": "^3.0.8"
   }
 }
