--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "webpack": "^4.15.1"
   },
   "scripts": {
